# OpenOpen

./: .gitignore  AGENTS.md  BUILD_WEEK.md  Cargo.toml  LICENSE  PROVENANCE.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
crates/openopen-codex-client/: Cargo.toml
crates/openopen-codex-client/src/: contracts.rs  lib.rs  process.rs  wire.rs
crates/openopen-core/: Cargo.toml
crates/openopen-core/src/: channel.rs  crypto.rs  effect.rs  gate.rs  lib.rs  markdown.rs  mission.rs  store.rs
crates/openopen-core/tests/: friday_alpha_stress.rs  mission_invariants.rs  store_invariants.rs
crates/openopen-deep-zip-worker/: Cargo.toml
crates/openopen-deep-zip-worker/src/: lib.rs
crates/openopen-deep-zip-worker/tests/: adversarial.rs  memory_context.rs  preview_session.rs
crates/openopen-discord-adapter/: Cargo.toml
crates/openopen-discord-adapter/src/: lib.rs
crates/openopen-effect-broker/: Cargo.toml
crates/openopen-effect-broker/src/: journal.rs  lib.rs  tests.rs  workspace.rs
crates/openopen-host/: Cargo.toml
crates/openopen-host/src/: channels.rs  lib.rs  main.rs
crates/openopen-imsg-adapter/: Cargo.toml
crates/openopen-imsg-adapter/src/: lib.rs
crates/openopen-imsg-adapter/tests/: adapter.rs
crates/openopen-persona/: Cargo.toml
crates/openopen-persona/src/: lib.rs
crates/openopen-protocol/: Cargo.toml
crates/openopen-protocol/src/: lib.rs
crates/openopen-skill-lifecycle/: Cargo.toml
crates/openopen-skill-lifecycle/src/: acquisition.rs  lib.rs  tests.rs
crates/openopen-skill-lifecycle/tests/: lifecycle.rs
docs/: OPENOPEN_30H_EXECUTION_CONTROL.md  OPENOPEN_BUILD_WEEK_MASTER_PLAN.md  OPENOPEN_DEFAULT_PERSONA_DRAFT_03.md  OPENOPEN_PRIVATE_AGENT_CHOICE_LOOP_DESIGN.md
evidence/: ACCEPTANCE_LEDGER.md
evidence/release-proof/: README.md
evidence/validation/: PERSONA_DRAFT_03_HUMAN_STRESS_REPORT.md  PERSONA_DRAFT_03_OPENCLAW_COMPARISON.md  README.md  persona-draft-03-human-stress-50.jsonl  persona-draft-03-openclaw-v2026.7.1-comparison.jsonl
macos/EffectBrokerBridge/: BROKER_TRUST_CONTRACT.md  BUNDLE_INTEGRATION.md  Package.swift
macos/EffectBrokerBridge/Sources/EffectBrokerBridge/: BrokerConstants.swift  BrokerEnrollmentCoordinator.swift  BrokerListenerCoordinator.swift  BrokerServiceController.swift  BrokerTrustContract.swift  BrokerXPCProtocol.swift  CodeSigningIdentity.swift  CodexRuntimeHome.swift  PrivilegedBrokerClient.swift  RustBrokerProcessBackend.swift  StrictJSONDocument.swift
macos/EffectBrokerBridge/Sources/EffectBrokerBridge/Resources/LaunchDaemons/: com.thesongzhu.OpenOpen.EffectBroker.plist
macos/EffectBrokerBridge/Sources/OpenOpen/: main.swift
macos/EffectBrokerBridge/Sources/OpenOpenAppSupport/: AppModel.swift  CoreContracts.swift  CoreProcessClient.swift  DiscordTokenKeychain.swift  KeychainMasterKey.swift  LoginItemController.swift  OpenOpenViews.swift  PrivilegedBrokerRuntimeClient.swift  RemindersClient.swift
macos/EffectBrokerBridge/Sources/OpenOpenEffectBroker/: main.swift
macos/EffectBrokerBridge/Tests/EffectBrokerBridgeTests/: BrokerServiceControllerTests.swift  BrokerTrustContractTests.swift  CodeSigningIdentityTests.swift  KeychainDataStoreTests.swift  LaunchDaemonPlistTests.swift  RustBrokerProcessBackendTests.swift  TypedJSONEnvelopeTests.swift
macos/EffectBrokerBridge/Tests/OpenOpenAppSupportTests/: B2MemoryProcessingContractTests.swift  ChannelPairingContractTests.swift  DiscordPairingInstructionTests.swift  DiscordSecureEntryTests.swift  DiscordTokenKeychainTests.swift  FrozenBPlusSetupViewsTests.swift  OpenOpenAppSupportTests.swift
macos/OpenOpenApp/: Info.plist
protocol/codex/0.144.0/: manifest.json
protocol/codex/0.144.0/schema/: ClientRequest.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
protocol/codex/0.144.0/schema/v2/: ThreadForkParams.json  ThreadResumeParams.json  ThreadResumeResponse.json  ThreadStartParams.json  ThreadStartResponse.json  TurnStartParams.json
resources/persona/openopen.nondev.default/draft-03-en/: evals.jsonl  manifest.json  messages.en.json  persona.json  scenarios.json
scripts/: build_pinned_imsg.sh  create_alpha_dmg.sh  generate_persona_evals.py  generate_third_party_notices.sh  stage_effect_broker_components.sh  stage_openopen_app.sh  validate_persona_human_stress.py  validate_persona_openclaw_comparison.py
