[workspace]
members = [
    "crates/openopen-core",
    "crates/openopen-effect-broker",
    "crates/openopen-host",
    "crates/openopen-protocol",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/thesongzhu/OpenOpen"
rust-version = "1.90"

[workspace.dependencies]
aes-gcm = "0.10.3"
ed25519-dalek = "2.2.0"
getrandom = "0.3.4"
hex = "0.4.3"
libc = "0.2.186"
openopen-core = { path = "crates/openopen-core" }
openopen-protocol = { path = "crates/openopen-protocol" }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rustix = { version = "1.1.2", features = ["fs", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tempfile = "3.23.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
