[workspace]
members = [
    "crates/openopen-codex-client",
    "crates/openopen-core",
    "crates/openopen-deep-zip-worker",
    "crates/openopen-discord-adapter",
    "crates/openopen-effect-broker",
    "crates/openopen-host",
    "crates/openopen-imsg-adapter",
    "crates/openopen-persona",
    "crates/openopen-protocol",
    "crates/openopen-skill-lifecycle",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/thesongzhu/OpenOpen"
rust-version = "1.90"

[workspace.dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono-tz = "0.10.4"
ed25519-dalek = "2.2.0"
getrandom = "0.3.4"
hex = "0.4.3"
libc = "0.2.186"
openopen-core = { path = "crates/openopen-core" }
openopen-codex-client = { path = "crates/openopen-codex-client" }
openopen-discord-adapter = { path = "crates/openopen-discord-adapter" }
openopen-deep-zip-worker = { path = "crates/openopen-deep-zip-worker" }
openopen-imsg-adapter = { path = "crates/openopen-imsg-adapter" }
openopen-persona = { path = "crates/openopen-persona" }
openopen-protocol = { path = "crates/openopen-protocol" }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rustix = { version = "1.1.2", features = ["fs", "process", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tempfile = "3.23.0"
zeroize = "1.8.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
