[package]
name = "openopen-codex-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
rustix.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
