[package]
name = "openopen-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aes-gcm.workspace = true
chrono-tz.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
hex.workspace = true
openopen-protocol.workspace = true
rustix.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
