[package]
name = "openopen-deep-zip-worker"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.90"

[dependencies]
flate2 = { version = "=1.1.9", default-features = false, features = ["zlib-rs"] }
libproc = "=0.14.11"
nix = { version = "=0.31.3", default-features = false, features = ["fs", "resource"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
tempfile = "=3.23.0"
thiserror = "=2.0.18"
unicode-casefold = "=0.2.0"
unicode-normalization = "=0.1.25"
zip = { version = "=6.0.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
