[package]
name = "openopen-effect-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ed25519-dalek.workspace = true
getrandom.workspace = true
hex.workspace = true
openopen-protocol.workspace = true
rusqlite.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
openopen-core.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[[bin]]
name = "OpenOpenEffectBrokerWorker"
path = "src/bin/worker.rs"
