[package]
name = "openopen-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openopen-core.workspace = true
openopen-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
