[package]
name = "openopen-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
getrandom.workspace = true
hex.workspace = true
openopen-codex-client.workspace = true
openopen-core.workspace = true
openopen-protocol.workspace = true
rusqlite.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
tempfile.workspace = true

[lints]
workspace = true
